syntax = "proto3";

package pb;

option go_package = "github.com/comerc/budva43/transport/grpc/pb";

service FacadeGRPC {
  rpc GetMessages (GetMessagesRequest) returns (MessagesResponse);
  rpc GetChatHistory (GetChatHistoryRequest) returns (MessagesResponse);
  rpc SendMessage (SendMessageRequest) returns (EmptyResponse);
  rpc SendMessageAlbum (SendMessageAlbumRequest) returns (EmptyResponse);
  rpc ForwardMessage (ForwardMessageRequest) returns (EmptyResponse);
  rpc GetMessage (GetMessageRequest) returns (MessageResponse);
  rpc UpdateMessage (UpdateMessageRequest) returns (EmptyResponse);
  rpc DeleteMessages (DeleteMessagesRequest) returns (EmptyResponse);
  rpc GetMessageLink (GetMessageLinkRequest) returns (MessageLinkResponse);
  rpc GetMessageLinkInfo (GetMessageLinkInfoRequest) returns (MessageResponse);
}

message NewMessage {
  int64 chat_id = 2;
  string text = 1;
  int64 reply_to_message_id = 3;
  string file_path = 4;
}

message Message {
  int64 id = 1;
  int64 chat_id = 2;
  string text = 3;
  bool forward = 4;
  string file_path = 5;
}

message GetMessagesRequest {
  int64 chat_id = 1;
  repeated int64 message_ids = 2;
}

message GetChatHistoryRequest {
  int64 chat_id = 1;
  int64 from_message_id = 2;
  int32 offset = 3;
  int32 limit = 4;
}

message MessagesResponse {
  repeated Message messages = 1;
}

message SendMessageRequest {
  NewMessage new_message = 1;
}

message SendMessageAlbumRequest {
  repeated NewMessage new_messages = 1;
}

message ForwardMessageRequest {
  int64 chat_id = 1;
  int64 message_id = 2;
}

message MessageResponse {
  Message message = 1;
}

message GetMessageRequest {
  int64 chat_id = 1;
  int64 message_id = 2;
}

message UpdateMessageRequest {
  Message message = 1;
}

message DeleteMessagesRequest {
  int64 chat_id = 1;
  repeated int64 message_ids = 2;
}

message GetMessageLinkRequest {
  int64 chat_id = 1;
  int64 message_id = 2;
}

message MessageLinkResponse {
  string link = 1;
}

message GetMessageLinkInfoRequest {
  string link = 1;
}

message EmptyResponse {}